css/main.css
/* ... */
footer .social-icons {
  flex: 1;
  display: flex;
  justify-content: center;
  gap: 12px;
}

footer .social-icons img {
  width: 30px;
  height: 30px;
}

.lan-container {
  flex: 1;
  text-align: right;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  font-size: 18px;
}

.lan {
  width: 18px;
  height: 18px;
  vertical-align: middle;
}

.lan-container a {
  text-decoration: none;
  font-size: 18px;
  color: black;
}

#subscribe {
  font-weight: 600;
}

#subscribe-text {
  font-weight: 400;
  font-size: 15px;
  color: black;
  margin-top: 0;
  margin-bottom: 15px;
}

.subscribe-btn {
  font-size: 15px;
}

.icon {
  cursor: pointer;
  transition: all 0.3s;
}

.icon:hover {
  opacity: 0.5;
  transform: translateY(-3px);
}

#hr {
  border: none;
  border-top: 1px solid #e5e5e5;
  width: 100%;
}

body {
  margin: 0;
  color: #000;
  background: #fff;
}

/* Section 1: Hero */
.hero {
  background-image: url("../images/Elia-Locardi-Travel-Photography-Shanghai-City-Of-Lights-China-1440-WM-DM-60q\ copy.jpg");
  background-size: cover;
  background-position: center;
  height: 80vh;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero-content h1 {
  font-size: 3.5vw;
  color: #fff;
  font-weight: 500;
  text-align: center;
  padding: 1rem;
  margin: 0;
}

.hero-content p {
  font-size: 1.5vw;
  font-weight: 500;
  justify-content: center;
  color: #fff;
  max-width: 30vw;
  text-align: center;
  margin: 0;
  padding: 1rem;
}

.hero-content button {
  padding: 0.75rem 1.5rem;
  background-color: transparent;
  border: 2px solid;
  border-color: white;
  border-radius: 5px;
  color: white;
  font-size: 1rem;
  font-weight: 450;
  cursor: pointer;
  transition: all 0.3s ease;
  margin-left: 0;
}

.hero-content button:hover {
  transform: translateY(-3px);
}

/* Section 2: weather box */

.weather-box {
  width: 100%;
  padding: 12px 20px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  text-align: center;
  border-bottom: 2px;
  border-radius: 0;
  margin: 0;
  margin-top: 2.5rem;
}

.weather-box h2 {
  margin-bottom: 15px;
  font-size: 22px;
  font-weight: 500;
  color: #17689c;
}

#weather-information {
  font-size: 16px;
  font-weight: 400;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 12px;
}

/* Section 3: Shortcuts */
.shortcuts {
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 50px;
  text-align: center;
}
.shortcuts h2 {
  font-size: 24px;
  font-weight: 500;
  color: #000;
  padding: 0.2vw;
  margin: 0;
}
.category-row {
  display: flex;
  margin-top: 30px;
  gap: 1rem;
}

.category {
  flex: 1;
  background-size: cover;
  background-position: center;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 1.5rem;
  font-weight: 500;
  border-radius: 20px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.category:hover {
  transform: scale(1.05);
}
.category-row a {
  flex: 1;
  text-decoration: none;
}

.category-row a:nth-child(1) .category {
  background-image: url("../images/museum..jpg");
}
.category-row a:nth-child(2) .category {
  background-image: url("../images/bistro.jpg");
}
.category-row a:nth-child(3) .category {
  background-image: url("../images/fashion.jpg");
}
.category-row a:nth-child(4) .category {
  background-image: url("../images/hotel.jpg");
}

/* Section 4: Promo */
.promo {
  display: flex;
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 70px;
  gap: 2rem;
  align-items: center;
}

.promo-img {
  width: 50svw;
  border-radius: 1rem;
}

.promo-text {
  width: 50vw;
}
.promo-text h3 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
  font-weight: 500;
}

.promo-text a {
  color: #17689c;
  text-decoration: none;
  font-weight: 450;
  border: 2px solid #17689c;
  padding: 10px 20px;
  border-radius: 5px;
  transition: transform 0.3s ease;
  display: inline-block;
  transform: translateY(0);
  position: relative;
  z-index: 1;
}

.promo-text a:hover {
  transform: translateY(-3px);
}

/* Section 5: Top Rated */
.top-rated {
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 70px;
  text-align: center;
}

.top-rated h2 {
  font-weight: 500;
}

.top-rated-gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 2rem;
  margin-top: 0;
  padding: 0;
}

.activity img {
  width: 100%;
  border-radius: 0.5rem;
  display: block;
  aspect-ratio: 3/2;
  object-fit: cover;
}

.activity {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1;
  min-width: 200px;
  max-width: 300px;
}

.activity p {
  margin-top: 1rem;
  text-align: center;
  font-weight: bold;
}

.small {
  flex: 1;
  background-size: cover;
  background-position: center;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.medium {
  flex: 1;
  background-size: cover;
  background-position: center;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.large {
  flex: 1;
  background-size: cover;
  background-position: center;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Section 6: Last Minute */
.last-minute {
  background-image: url("../images/WechatIMG779.jpg");
  width: 100%;
  height: 40vh;
  background-size: cover;
  background-position: center;
  color: white;
  text-align: center;
  padding: 5rem 1rem;
  position: relative;
}

.last-minute-overlay h2 {
  font-weight: 500;
}

.btn-transparent {
  background-color: transparent;
  color: white;
  padding: 0.5rem 1.5rem;
  font-size: 1rem;
  border: 2px solid #fff;
  border-radius: 0.5rem;
  margin-top: 1rem;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.btn-transparent:hover {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.5);
}
/* ... */

